# ai-agents

SimpleWebApp/: .env  main.py  pyproject.toml
SimpleWebApp/models/: customer.py
SimpleWebApp/static/: styles.css
SimpleWebApp/templates/: add_customer.html  footer.html  head.html  header.html  index.html  layout.html
chat-push-message/: README.md  chatAssitant.py  inputModels.py  langgraph_basic.py  main.py  open-ai.py  pushover.py  pyproject.toml  wa-bot.py  wa_api.py
wa-chat-agent/: AI Assistant Architecture.md  arch.md  pyproject.toml  test_imports.py  wa-chat-app.ps1
wa-chat-agent/src/: graph.py  state.py  wa-bot.py  waBot.py  wa_api.py  wa_tools.py
